--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Glory:wght@100;700&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div class="main-item">
         <img
           class="portfolio-img"
-          src="/images/portfolio-1.png"
+          src="images/portfolio-1.png"
           alt="Marketing Image"
         />
         <h3>Marketing Page</h3>
@@ -56,7 +56,7 @@
         <div class="main-item">
         <img
           class="portfolio-img"
-          src="/images/portfolio-2.png"
+          src="images/portfolio-2.png"
           alt="Search Image"
         />
         
@@ -69,7 +69,7 @@
 
         <div class="main-item">
         <img
-          src="/images/portfolio-3.png"
+          src="images/portfolio-3.png"
           alt="Travel Page"
           class="portfolio-img"
         />
@@ -82,7 +82,7 @@
 
         <div class="main-item">
         <img
-          src="/images/portfolio-4.png"
+          src="images/portfolio-4.png"
           alt="Map Page"
           class="portfolio-img"
         />
@@ -94,7 +94,7 @@
         </div>
         <div class="main-item">
         <img
-          src="/images/portfolio-5.png"
+          src="images/portfolio-5.png"
           alt="Photo Gallery Page"
           class="portfolio-img"
         />
@@ -107,7 +107,7 @@
 
         <div class="main-item">
         <img
-          src="/images/portfolio-6.png"
+          src="images/portfolio-6.png"
           alt="Calculator"
           class="portfolio-img"
         />
