--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
         </p>
       </div>
       </div>
-      <div class="bottom-nav">
+      
    
       <h2 class="bottom-name">Moe Friedman</h2>
-      
+      <h2 class="back-to-top">Back to top</h2>
+      <div class="bottom-nav">
         <ul class="bottom-nav-container">
           <li class="bottom-nav-item"><a href="#HomeLink"> Home</a></li>
           <li class="bottom-nav-item"><a href="#portfolioLink">Portfolio</a></li>
