--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
   </head>
   <body>
     <header class="header">
-      <h1 id="HomeLink" class="top-name">Moe Friedman</h1>
-      <nav class="top-nav">
-        <ul class="top-nav-container">
-          <li class="top-nav-item"><a href="#HomeLink">Home</a></li>
-          <li class="top-nav-item"><a href="#portfolioLink"> Portfolio</a></li>
-          <li class="top-nav-item">
-            <a id="contact" href="#contactLink">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="inline">
+        <h1 id="HomeLink" class="top-name">Moe Friedman</h1>
+
+        <nav class="top-nav">
+          <ul class="top-nav-ul">
+            <!-- <div class="flex-end"> -->
+            <li class="top-nav-item"><a href="#HomeLink">Home</a></li>
+            <li class="top-nav-item">
+              <a href="#portfolioLink"> Portfolio</a>
+            </li>
+            <li class="top-nav-item">
+              <a id="contact" href="#contactLink">Contact</a>
+            </li>
+            <!-- </div> -->
+          </ul>
+        </nav>
+      </div>
 
       <div id="aboutme" class="aboutme">
         <img
@@ -135,9 +142,10 @@
         <p class="email">Email <strong> email@yoursite.com</strong></p>
       </div>
 
-      <h2 class="bottom-name">Moe Friedman</h2>
-      <h2 class="back-to-top"><a href="#HomeLink">Back to top</a></h2>
       <div class="bottom-nav">
+        <h2 class="bottom-name">Moe Friedman</h2>
+        <h2 class="back-to-top"><a href="#HomeLink">Back to top</a></h2>
+        <!-- <div class="bottom-nav"> -->
         <ul class="bottom-nav-container">
           <li class="bottom-nav-item"><a href="#HomeLink"> Home</a></li>
           <li class="bottom-nav-item">
